deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subtle-net-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linebot
  template:
    metadata:
      labels:
        app: linebot
    spec:
      containers:
        - name: linebot-gke
          image: asia-east1-docker.pkg.dev/subtle-gke/subtle-gke-repo/linebot-gke:latest
          ports:
            - containerPort: 5002
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "1Gi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
