ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linebot-ingress
  annotations:
    networking.gke.io/managed-certificates: my-cert
    kubernetes.io/ingress.allow-http: "true"
    ingressClassName: "gce"
  labels:
    app: linebot
spec:
  defaultBackend:
    service:
      name: linebot-service
      port:
        number: 80
  rules:
    - host: subtle-net-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linebot-service
                port:
                  number: 80
